remove gulpachek-c dependency

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "glob": "^10.3.7",
-    "gulpachek": "file:../gulpachek",
-    "gulpachek-c": "file:../gulpachek-c"
+    "gulpachek": "^0.3.0"
   }
 }
