--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "glob": "^10.3.7",
-    "iheartmake": "^0.4.0"
+    "esmakefile": "^0.5.0",
+    "glob": "^10.3.7"
   }
 }
