--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esmakefile": "^0.5.0",
-    "glob": "^10.3.7"
+    "esmakefile": "^0.6.1"
   }
 }
