--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esmakefile": "^0.6.1"
+    "esmakefile": "^0.6.1",
+    "nunjucks": "^3.2.4"
   }
 }
